fixed authantication and favorites
